--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,19 @@
     <packaging>jar</packaging>
     <version>1.0.0-SNAPSHOT</version>
     <name>jpromisor</name>
-    <url>http://maven.apache.org</url>
+    <url>https://github.com/oldmanpushcart/jpromisor</url>
+
+    <developers>
+        <developer>
+            <name>vlinux</name>
+            <email>oldmanpushcart@gmail.com</email>
+        </developer>
+    </developers>
+    <scm>
+        <connection>scm:git:git@github.com:oldmanpushcart/jpromisor.git</connection>
+        <developerConnection>scm:git:git@github.com:oldmanpushcart/jpromisor.git</developerConnection>
+        <url>git@github.com:oldmanpushcart/jpromisor.git</url>
+    </scm>
 
     <build>
         <plugins>
